[project]
name = "dash-cyto-demo"
authors = [{name = "Christian Fobel", email = "christian@fobel.net"}]
requires-python = ">= 3.11"
version = "0.1.0"
readme = "README.md"
license = {text = "MIT"}
dependencies = [ "dash>=2.18.2,<3", "dash-cytoscape>=1.0.2,<2"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
dash_cyto_demo = { path = ".", editable = true }

[tool.pixi.tasks]
